# videts

./: .gitignore  Makefile  README.md  main.py  setup.cfg  ve.py  video_editor  video_editor.cpp  videts
include/: Application.h  ColorOps.h  CompositeOps.h  FilterOps.h  GeometricOps.h  MorphOps.h  TemporalOps.h  VideoEditor.h  VideoIO.h
src/: Application.cpp  ColorOps.cpp  CompositeOps.cpp  FilterOps.cpp  GeometricOps.cpp  MorphOps.cpp  TemporalOps.cpp  VideoEditor.cpp  VideoIO.cpp  color_ops.py  composite_ops.py  filter_ops.py  geometric_ops.py  main.cpp  morph_ops.py  temporal_ops.py  video_editor.py  video_io.py
src/videts/: __init__.py  cli.py  color_ops.py  composite_ops.py  filter_ops.py  geometric_ops.py  help.py  morph_ops.py  temporal_ops.py  video_editor.py  video_io.py
