[metadata]
name = videts
version = 0.1.0
description = Video editing tools
author = MrSaeidSeyfi
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=3.8

[options.packages.find]
where = src
