[metadata]
name = videts
version = 1.0.1
description = Video editing tools
long_description = file: README.md
long_description_content_type = text/markdown
author = MrSaeidSeyfi
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=3.8
install_requires =
    opencv-python
    numpy

[options.entry_points]
console_scripts =
    videts = videts.cli:main
    ve = videts.cli:main

[options.packages.find]
where = src


